--- a/roles/security/defaults/main.yml
+++ b/roles/security/defaults/main.yml
@@ -1,22 +1,22 @@
 ---
-# Modern Security Role - Essential Variables Only
-# Focus on advanced hardening with sensible defaults
+# Optimized Security Role - Consolidated Security Hardening
+# All kernel security parameters consolidated here
 
 # Audit logging configuration
 security_enable_audit: true
-security_audit_rules: "moderate"  # strict, moderate, basic
+security_audit_rules: "basic"  # basic, moderate, strict
 security_audit_max_log_file: 50
 security_audit_num_logs: 5
 
-# Kernel security hardening
+# Kernel security hardening (consolidated from common role)
 security_kernel_hardening: true
 
-# Compliance level - determines how strict security measures are
-security_compliance_level: "moderate"  # strict, moderate, basic
+# Compliance level determines security strictness
+security_compliance_level: "basic"  # basic, moderate, strict
 
 # Security scanning and monitoring
-security_enable_scanning: true
-security_scan_schedule: "0 2 * * 0"  # Weekly at 2 AM
+security_enable_scanning: false  # Disabled for basic setup
+security_scan_schedule: "0 2 * * 0"
 
 # AppArmor/SELinux
 security_enable_apparmor: true
