--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-# Modern Common Role - Essential Variables Only
-# Focus on what's truly needed for base system setup
+# Optimized Common Role - Essential Variables Only
+# Enhanced with fail2ban and auto-updates
 
 # Admin users to create with sudo access
 common_admin_users: []
@@ -16,12 +16,15 @@ common_packages: []
 common_timezone: "UTC"
 common_hostname: "{{ inventory_hostname }}"
 
-# SSH security (enabled by default)
+# SSH security (enhanced defaults)
 common_harden_ssh: true
 common_ssh_port: 22
 common_disable_root_login: true
 common_ssh_password_auth: false
+common_ssh_max_auth_tries: 3
 
-# Basic security (enabled by default)
+# Basic security (enhanced with fail2ban)
 common_update_packages: true
 common_install_security_packages: true
+common_enable_fail2ban: true
+common_enable_auto_updates: true
