--- a/roles/firewall/meta/main.yml
+++ b/roles/firewall/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: firewall
   namespace: summitethic
   author: SummitEthic DevOps Team
-  description: Modern network security configuration with OS-appropriate firewall management
+  description: Auto-integrated network security with service discovery
   company: SummitEthic
   license: MIT
   min_ansible_version: "2.15"
