--- a/roles/monitoring/meta/main.yml
+++ b/roles/monitoring/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: monitoring
   namespace: summitethic
   author: SummitEthic DevOps Team
-  description: Modern observability agents for metrics collection and system monitoring
+  description: Node Exporter installation for Prometheus monitoring
   company: SummitEthic
   license: MIT
   min_ansible_version: "2.15"
