--- a/roles/traefik/defaults/main.yml
+++ b/roles/traefik/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
-# Modern Traefik Role - Essential Variables Only
-# Focus on container-native reverse proxy with sensible defaults
+# Optimized Traefik Role - Container-Native Reverse Proxy
+# Simplified for essential reverse proxy functionality
 
-# Basic Traefik configuration
+# Basic configuration
 traefik_enabled: true
 traefik_version: "3.1"
-traefik_domain: ""  # Required: your domain (e.g., "summitethic.com")
-traefik_email: ""   # Required: email for Let's Encrypt
+traefik_domain: ""
+traefik_email: ""
 
 # Network configuration
 traefik_network: "traefik"
@@ -19,24 +19,22 @@ traefik_dashboard_enabled: true
 traefik_dashboard_subdomain: "traefik"
 traefik_dashboard_auth: true
 traefik_dashboard_users: []
-#  - username: "admin"
-#    password: "secure_password"  # Will be hashed automatically
 
 # Let's Encrypt configuration
 traefik_letsencrypt_enabled: true
-traefik_letsencrypt_staging: false  # Set to true for testing
+traefik_letsencrypt_staging: false
 traefik_letsencrypt_resolver: "letsencrypt"
 
 # Security configuration
 traefik_security_headers: true
 traefik_rate_limiting: true
-traefik_default_rate_limit: "100/s"
+traefik_default_rate_limit: "100"
 
 # Container configuration
 traefik_container_name: "traefik"
 traefik_data_dir: "/var/lib/traefik"
-traefik_log_level: "INFO"  # DEBUG, INFO, WARN, ERROR
+traefik_log_level: "INFO"
 
-# Integration with existing roles
+# Integration
 traefik_monitoring_integration: true
 traefik_firewall_integration: true
