--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -1,7 +1,6 @@
 ---
-# Modern Traefik Role - Container-Native Reverse Proxy
-# Single task file approach for efficiency
-# Uses FQCN throughout for future-proofing
+# Optimized Traefik Role - Container-Native Reverse Proxy
+# Streamlined for essential functionality
 
 - name: Validate required variables
   ansible.builtin.assert:
@@ -9,7 +8,7 @@
       - traefik_domain != ""
       - traefik_email != ""
       - ansible_facts['services']['docker.service'] is defined
-    fail_msg: "Traefik requires domain, email, and Docker service to be running"
+    fail_msg: "Traefik requires domain, email, and Docker service"
   tags: [traefik, validation]
 
 - name: Create Traefik data directory
@@ -42,29 +41,17 @@
     - traefik_dashboard_users | length > 0
   tags: [traefik, auth]
 
-- name: Create Traefik static configuration
+- name: Create Traefik configuration files
   ansible.builtin.template:
-    src: traefik.yml.j2
-    dest: "{{ traefik_data_dir }}/traefik.yml"
+    src: "{{ item.src }}"
+    dest: "{{ traefik_data_dir }}/{{ item.dest }}"
     mode: '0644'
+  loop:
+    - { src: "traefik.yml.j2", dest: "traefik.yml" }
+    - { src: "dynamic.yml.j2", dest: "dynamic.yml" }
+    - { src: "docker-compose.yml.j2", dest: "docker-compose.yml" }
   notify: Restart Traefik
   tags: [traefik, config]
-
-- name: Create Traefik dynamic configuration
-  ansible.builtin.template:
-    src: dynamic.yml.j2
-    dest: "{{ traefik_data_dir }}/dynamic.yml"
-    mode: '0644'
-  notify: Restart Traefik
-  tags: [traefik, config]
-
-- name: Create Traefik Docker Compose file
-  ansible.builtin.template:
-    src: docker-compose.yml.j2
-    dest: "{{ traefik_data_dir }}/docker-compose.yml"
-    mode: '0644'
-  notify: Restart Traefik
-  tags: [traefik, compose]
 
 - name: Deploy Traefik container
   community.docker.docker_compose_v2:
@@ -73,53 +60,6 @@
     wait: true
     wait_timeout: 60
   tags: [traefik, deploy]
-
-- name: Add firewall rules for Traefik
-  when:
-    - traefik_firewall_integration
-    - firewall_enabled | default(true)
-  tags: [traefik, firewall]
-  block:
-    - name: Open HTTP port in firewall
-      community.general.ufw:
-        rule: allow
-        port: "{{ traefik_web_port }}"
-        proto: tcp
-        comment: "Traefik HTTP"
-      when: ansible_os_family == "Debian"
-
-    - name: Open HTTPS port in firewall
-      community.general.ufw:
-        rule: allow
-        port: "{{ traefik_websecure_port }}"
-        proto: tcp
-        comment: "Traefik HTTPS"
-      when: ansible_os_family == "Debian"
-
-    - name: Open HTTP port in firewalld
-      ansible.posix.firewalld:
-        port: "{{ traefik_web_port }}/tcp"
-        permanent: true
-        immediate: true
-        state: enabled
-        zone: public
-      when: ansible_os_family == "RedHat"
-
-    - name: Open HTTPS port in firewalld
-      ansible.posix.firewalld:
-        port: "{{ traefik_websecure_port }}/tcp"
-        permanent: true
-        immediate: true
-        state: enabled
-        zone: public
-      when: ansible_os_family == "RedHat"
-
-- name: Create Traefik status script
-  ansible.builtin.copy:
-    src: traefik-status.sh
-    dest: /usr/local/bin/traefik-status
-    mode: '0755'
-  tags: [traefik, monitoring]
 
 - name: Wait for Traefik to be ready
   ansible.builtin.uri:
@@ -138,8 +78,6 @@
       - "Dashboard: https://{{ traefik_dashboard_subdomain }}.{{ traefik_domain }}"
       - "Network: {{ traefik_network }}"
       - "Let's Encrypt: {{ 'Enabled' if traefik_letsencrypt_enabled else 'Disabled' }}"
-      - "Staging Mode: {{ 'Yes' if traefik_letsencrypt_staging else 'No' }}"
-      - "Health Check: {{ 'Healthy' if traefik_health.status == 200 else 'Unhealthy' }}"
-      - "HTTP Port: {{ traefik_web_port }}"
-      - "HTTPS Port: {{ traefik_websecure_port }}"
+      - "Health: {{ 'Healthy' if traefik_health.status == 200 else 'Unhealthy' }}"
+      - "HTTP: {{ traefik_web_port }}, HTTPS: {{ traefik_websecure_port }}"
   tags: [traefik, info]
